--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="esi">Ed. Sexual</string>
     <string name="bio">Biología</string>
     <string name="len">Lengua</string>
-    <string name="busctema">Buscar tema...</string>
+    <string name="busctema">Buscar tema…</string>
 </resources>
